0.8.9 (??/??/2014):
-------------------

- Added check for an oversized 0xEE protective partition. The program now
  auto-repairs this condition on loading if the GPT data seem otherwise
  valid. This is done because I've been receiving reports of some disks
  (possibly from some OEM Windows 8 loads) that violate the GPT spec in
  this way, and gdisk was reporting write errors when saving data.

- If the GPT data seem to be damaged in some way or if the disk seems to
  be a hybrid MBR and if the MBR partition(s) don't fit on the disk, the
  verify (v) function now warns of this condition, and writing the disk if
  it exists also displays a more specific error message about the problem.

- Added new type codes (3000, 7412F7D5-A156-4B13-81DC-867174929325 and
  3001, D4E6E2CD-4469-46F3-B5CB-1BFF57AFC149) for Open Network Install
  Environment (ONIE) boot and config partitions, respectively.

- Added new type ccde (ED01, BFBFAFE7-A34F-448A-9A5B-6213EB736C22), for
  Lenovo's ESP-like partition.

0.8.8 (10/14/2013):
-------------------

- Fixed bug that could cause segfault when passing an invalid partition
  number to sgdisk's -i/--info command.

- Added new type code: 933AC7E1-2EB4-4F13-B844-0E14E2AEF915, or gdisk code
  8302, for Linux /home partitions. This type code is used by recent
  versions of systemd to permit /home to be auto-mounted; see
  http://www.freedesktop.org/software/systemd/man/systemd-gpt-auto-generator.html
  for details.

- Added new type code: 9E1A2D38-C612-4316-AA26-8B49521E5A8B, or gdisk code
  4100, for PowerPC PReP (PowerPC reference platform) boot.

- The number of partition type codes has grown large enough that it fills
  an 80x24 display. I've therefore added a pause (with a prompt to hit
  <Enter>) to display more items after showing 21 lines in gdisk or after
  the screen has nearly filled with entries in cgdisk. There's no such
  pause/prompt in sgdisk, though.
